shema in swagger
